--- a/src/main/resources/templates/fragments/actionBody.html
+++ b/src/main/resources/templates/fragments/actionBody.html
@@ -44,6 +44,10 @@
 	<div th:if="${action == 'leaveSubmitForm'}">
 		<div th:insert="~{submit-leave-app.html :: body}"></div>
 	</div>
+	
+	<div th:if="${action == 'consume-claim'}">
+		<div th:insert="~{apply-leave-using-claim.html :: body}"></div>
+	</div>
 		
 	<div th:if="${action == 'viewleaveHistory'}">
 		<div th:insert="~{personal-leave-history.html :: style}"></div>
@@ -71,6 +75,11 @@
 	<div th:if="${action == 'show-leave-details'}">
 		<div th:insert="~{leave-details.html :: style}"></div>
 		<div th:insert="~{leave-details.html :: body}"></div>
+	</div>
+	
+	<div th:if="${action == 'claim-details'}">
+		<div th:insert="~{claim-details.html :: style}"></div>
+		<div th:insert="~{claim-details.html :: body}"></div>
 	</div>
 
 	<div th:if="${action == 'search-employee-history'}">
