--- a/src/main/resources/templates/apply-leave-using-claim.html
+++ b/src/main/resources/templates/apply-leave-using-claim.html
@@ -19,8 +19,8 @@
 		
 		<div class="d-flex justify-content-start flex-row">
 			<div class="m-2 d-flex flex-row align-item-center">
-				<input type="checkbox" th:field="*{isHalfDayLeave}" onchange="toggleHalfDay()" id="isHalfDayLeave" name="ishalfday"/>
-				<label th:for="${#ids.next('isHalfDayLeave')}" class="mt-2 ms-2">Half-Day Leave</label>
+				<input type="checkbox" th:field="*{halfDayLeave}" onchange="toggleHalfDay()" id="halfDayLeave" name="ishalfday"/>
+				<label th:for="${#ids.next('halfDayLeave')}" class="mt-2 ms-2">Half-Day Leave</label>
 			</div>
 						
 			<div class="d-flex flex-row justify-content-start">
@@ -64,19 +64,16 @@
 	var isHalfDay = false;
 	function toggleHalfDay(){
 		isHalfDay = !isHalfDay;
-		const halfDayTag = document.getElementById("isHalfDayLeave");
 		const morningHalfTag = document.getElementById("morningHalf");
 		const afternoonHalfTag = document.getElementById("afternoonHalf");
 		const endTag = document.getElementById("endDate");
 		const startTag = document.getElementById("startDate");
 		if(isHalfDay){
-			halfDayTag.setAttribute("checked","checked");
 			morningHalfTag.removeAttribute("disabled");
 			afternoonHalfTag.removeAttribute("disabled");
 			endTag.setAttribute("disabled", true);
 			endTag.setAttribute("value", startTag.getAttribute("value"));
 		} else {
-			halfDayTag.removeAttribute("checked");
 			morningHalfTag.setAttribute("disabled", true);
 			afternoonHalfTag.setAttribute("disabled", true);
 			endTag.removeAttribute("disabled");
