--- a/src/main/resources/templates/submit-leave-app.html
+++ b/src/main/resources/templates/submit-leave-app.html
@@ -43,7 +43,7 @@
 		
 		<div class="d-flex flex-row p-2">
 			<input type="checkbox" id="overseasLeave" th:field="*{overseas}" name="overseasLeave" onchange="updateContactField()">
-			<label for="overseasLeave" class="ms-2 p-2">Overseas Leave</label>
+			<label for="overseasLeave" class="ms-2 mt-2">Overseas Leave</label>
 		</div>
 		
 		<div class="mb-3">
