--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -24,7 +24,7 @@ label {
 	font-weight: bold;
 }
 
-input[type="text"], select, input[type="number"] {
+input[type="text"], select, input[type="number"], input[type="password"] {
 	width: 100%;
 	padding: 8px;
 	margin-bottom: 5px;
