--- a/src/main/resources/templates/fragments/actionBody.html
+++ b/src/main/resources/templates/fragments/actionBody.html
@@ -37,8 +37,12 @@
 		<div th:insert="~{leave_type_form.html :: body}"></div>
 	</div>
 	<div th:if="${action == 'edit-leave-type'}">
-			<div th:insert="~{leave_type_form_edit.html :: body}"></div>
-		</div>
+		<div th:insert="~{leave_type_form_edit.html :: body}"></div>
+	</div>
+	<div th:if="${action == 'add-holidays'}">
+		<div th:insert="~{holiday.html :: style}"></div>
+		<div th:insert="~{holiday.html :: body}"></div>
+	</div>
 		
 	<!-- Employee Use Cases -->
 	<div th:if="${action == 'leaveSubmitForm'}">
