leave app system v0.2

--- a/src/main/resources/templates/applications-approval.html
+++ b/src/main/resources/templates/applications-approval.html
@@ -86,7 +86,7 @@
 				<tr>
 					<th style="background-color: #9090c0;">Date Submitted</th>
 					<th style="background-color: #9090c0;">Employee Name</th>
-					<th style="background-color: #9090c0;">Leave ID</th>
+					<th style="background-color: #9090c0;">Claim ID</th>
 					<th style="background-color: #9090c0;">Details</th>
 				</tr>
 			</thead>
