--- a/src/main/resources/templates/submit-leave-app.html
+++ b/src/main/resources/templates/submit-leave-app.html
@@ -57,7 +57,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-<script>
+<script th:inline="javascript">
 	var isOverseas = false;
 	
 	function updateContactField(){
