--- a/src/main/resources/templates/leave-entitlement-form.html
+++ b/src/main/resources/templates/leave-entitlement-form.html
@@ -4,7 +4,7 @@
     <title>Leave Entitlement Form</title>
 </head>
 <body>
-    <h1>Leave Entitlement Form</h1>
+    <h1 style="text-align: center; margin-top: 20px; margin-bottom: 20px; font-size: 30px; color: #0000FF;">Leave Entitlement Form</h1>
     <form th:action="@{/leave-entitlements/new}" th:object="${leaveEntitlement}" method="post">
         <div>
             <label for="leaveType">Leave Type:</label>
