--- a/src/main/resources/templates/manage-leave.html
+++ b/src/main/resources/templates/manage-leave.html
@@ -10,7 +10,8 @@
 		/* CSS styles */
 		table {
 			border-collapse: collapse;
-			width:100%;
+			width: 80%;
+			margin: 0 auto;
 		}
 
 		th,
@@ -20,19 +21,31 @@
 			padding: 8px;
 		}
 
-		th {
-			background-color: #f2f2f2;
-			/* Light gray background for column names */
+		tr:nth-child(odd) {
+			background-color: #ffe6f0;
 		}
 
 		tr:nth-child(even) {
-			background-color: #f2f2f2;
-			/* Light gray background for even rows */
+			background-color: #c6e2ff;
 		}
 
 		.blank-row {
 			background-color: #ffffff;
-			/* White background for blank rows */
+		}
+
+		.nav-link {
+			margin-top: 20px;
+			text-decoration: none;
+			color: #0000FF;
+			font-size: 16px;
+		}
+
+		h1 {
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			font-size: 30px;
+			color: #0000FF;
 		}
 	</style>
 </head>
@@ -60,19 +73,22 @@
 					<td th:text="${leave.reasons}"></td>
 					<td th:text="${leave.displayStatus()}"></td>
 					<td>
-						<a th:if="${leave.isUpdateable()}" th:href="@{/leave/update-leave/{id}(id=${leave.id})}">Update</a>
+						<a th:if="${leave.isUpdateable()}"
+							th:href="@{/leave/update-leave/{id}(id=${leave.id})}" style="color: blue">Update</a>
 						<span th:if="${!leave.isUpdateable()}" style="color: lightgrey">Update</span> |
-						<a th:if="${leave.isDeletable()}" th:href="@{/leave/delete-leave/{id}(id=${leave.id})}">Delete</a>
+						<a th:if="${leave.isDeletable()}"
+							th:href="@{/leave/delete-leave/{id}(id=${leave.id})}" style="color: darkorange">Delete</a>
 						<span th:if="${!leave.isDeletable()}" style="color: lightgrey">Delete</span> |
-						<a th:if="${leave.isCancellable()}" th:href="@{/leave/cancel-leave/{id}(id=${leave.id})}">Cancel</a>
+						<a th:if="${leave.isCancellable()}"
+							th:href="@{/leave/cancel-leave/{id}(id=${leave.id})}" style="color: red">Cancel</a>
 						<span th:if="${!leave.isCancellable()}" style="color: lightgrey">Cancel</span>
-						
+
 					</td>
 					<!--<td>
 						<a th:href="@{/manager/history/{employeeId}(id=${employee.id})}">View</a>
 					</td>-->
 				</tr>
-				
+
 			</tbody>
 		</table>
 		<a href="/leave/viewleaveHistory" class="nav-link">Back to Employee Leave History</a>
