--- a/src/main/resources/templates/submit-leave-app.html
+++ b/src/main/resources/templates/submit-leave-app.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container" th:fragment="submitLeaveAppBody">
-    <h2>Leave Application Form</h2>
+   <h2 style="text-align: center; margin-top: 20px; margin-bottom: 20px; font-size: 30px; color: #0000FF;">Leave Application Form</h2>
     <form th:action="@{/leave/submitForm}" th:object="${leave}" method="post">
 		<input hidden th:field="*{employee}" th:value="${leave.employee.id}"/>
 		
@@ -18,13 +18,13 @@
 			</select>
 		</div>
 		
-		<div class="form-group">
+		<div class="form-group mb-3">
 			<label for="startDate">Start Date:</label>
 			<input type="date" id="startDate" th:field="*{start}" class="form-control" />
 			<span th:if="${#fields.hasErrors('start')}" th:errors="*{start}" class="inputErrorMessage"></span>
 		</div>
 		
-		<div class="form-group">
+		<div class="form-group mb-3">
 			<label for="endDate">End Date:</label>
 			<input type="date" id="endDate" th:field="*{end}" class="form-control" />
 			<span th:if="${#fields.hasErrors('end')}" th:errors="*{end}" class="inputErrorMessage"></span>
@@ -36,14 +36,14 @@
 			<textarea class="form-control" id="reasons" th:field="*{reasons}" rows="3" maxlength="200"></textarea>
 		</div>
 		
-		<div class="mb-3">
+		<div class="mb-2">
 		    <label for="leaveStatus" class="form-label">Supporting Coworker</label>
 			<input type="text" class="form-control" id="SupportingCoworker" th:field="*{nameOfSupportingCoworker}" maxlength="30" required>
 		</div>
 		
-		<div class="d-flex flex-row p-2">
+		<div class="d-flex flex-row mb-3">
 			<input type="checkbox" id="overseasLeave" th:field="*{overseas}" name="overseasLeave" onchange="updateContactField()">
-			<label for="overseasLeave" class="ms-2 mt-2">Overseas Leave</label>
+			<label for="overseasLeave" class="ms-2" style="margin-bottom: 0; margin-left: 0;">Overseas Leave</label>
 		</div>
 		
 		<div class="mb-3">
@@ -53,7 +53,7 @@
 		</div>
 		
 		<br/>
-		<br/>
+		
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
