--- a/src/main/resources/templates/fragments/actionBody.html
+++ b/src/main/resources/templates/fragments/actionBody.html
@@ -39,6 +39,7 @@
 		<div th:insert="~{leave_type_form.html :: body}"></div>
 	</div>
 	<div th:if="${action == 'edit-leave-type'}">
+		<div th:insert="~{leave_type_form_edit.html :: style}"></div>
 		<div th:insert="~{leave_type_form_edit.html :: body}"></div>
 	</div>
 	<div th:if="${action == 'add-holidays'}">
