--- a/src/main/resources/templates/holiday.html
+++ b/src/main/resources/templates/holiday.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Public Holidays</title>
-	<style>
+	<style th:fragment="style">
 		body {
 			font-family: Arial, sans-serif;
 			background-color: #f0f0f0;
@@ -28,6 +28,16 @@
 		table {
 			width: 100%;
 			border-collapse: collapse;
+		}
+		
+		form {
+			max-width: 500px;
+			margin: 0 auto;
+			padding: 0;
+			background: #fff;
+			border-radius: 0px;
+			border:none;
+			box-shadow: none;
 		}
 
 		th,
@@ -68,6 +78,11 @@
 		.form-actions {
 			text-align: center;
 		}
+		
+		button {
+			background-color: red;
+			color: #000;
+		}
 
 		.form-actions button {
 			padding: 10px 20px;
@@ -81,7 +96,7 @@
 		.date {
 			display: flex;
 			justify-content: space-between;
-			gap: 10px;
+			
 			/* Add space between date and weekday */
 			text-align: left;
 		}
@@ -89,11 +104,7 @@
 	
 	
 	
-	<script>
-	    function confirmDelete() {
-	        return confirm("Are you sure you want to delete this holiday?");
-	    }
-	</script>
+	
 </head>
 
 <body>
@@ -107,7 +118,7 @@
 			<div>
 				<ul>
 					<li th:each="year : ${availableYears}">
-						<a th:href="@{'/holidays/' + ${year}}">View Holidays for <span th:text="${year}"></span></a>
+						<a th:href="@{'/admin/holidays/' + ${year}}">View Holidays for <span th:text="${year}"></span></a>
 					</li>
 				</ul>
 			</div>
@@ -126,14 +137,14 @@
 			<!-- Iterate over holiday data and display each holiday -->
 			<tr th:each="holiday : ${holidays}">
 				<td class="date">
-					<span class="text-align:left" th:text="${#dates.format(holiday.date, 'dd MMMM yyyy')}"></span>
+					<span class="text-align:left" th:text="${holiday.getHolidayDate()}"></span>
 				</td>
 				<td>
-					<span th:text="${#dates.format(holiday.date, 'EEEE')}"></span>
+					<span th:text="${holiday.getHolidayDay()}"></span>
 				</td>
 				<td class="holiday-name" th:text="${holiday.name}"></td>
 				<td>
-					<form id="deleteForm" th:action="@{/holidays/delete/{id}(id=${holiday.id})}" method="post" style="display:inline;" onsubmit="return confirmDelete();">
+					<form id="deleteForm" th:action="@{/admin/holidays/delete/{id}(id=${holiday.id})}" method="post" style="display:inline;" onsubmit="return confirmDelete();">
 					        <button type="submit">Delete</button>
 					    </form>
 				</td>
@@ -143,7 +154,7 @@
 		
 		<div th:if="${canAdd}">
 			<h2>Add New Holiday</h2>
-			<form action="/holidays/add" method="post">
+			<form action="/admin/holidays/add" method="post">
 				<div class="form-group">
 					<label for="name">Holiday Name</label>
 					<input type="text" id="name" name="name" required>
@@ -158,6 +169,12 @@
 			</form>
 		</div>	
 	</div>
+	
+	<script>
+		function confirmDelete() {
+			return confirm("Are you sure you want to delete this holiday?");
+		}
+	</script>
 </body>
 
 </html>
