--- a/src/main/resources/templates/personal-leave-history.html
+++ b/src/main/resources/templates/personal-leave-history.html
@@ -39,6 +39,7 @@
 
 <body th:fragment="body">
 	<div class="container">
+		<button class="btn btn-primary" id="toAllLeaves">View All Leaves</button>
 		<h1>My Leave History</h1>
 		<table>
 			<thead>
@@ -88,6 +89,13 @@
 				</table>
 		<a href="/" class="nav-link">Back to Employee History List Page</a>
 	</div>
+	<script>
+		const element = document.getElementById('toAllLeaves')
+				element.addEventListener('click', (e) => {
+		    		e.preventDefault()
+		    		location.href = 'http://localhost:3000'
+		})
+	</script>
 </body>
 
 </html>
