--- a/bin/src/main/resources/templates/application-details.html
+++ b/bin/src/main/resources/templates/application-details.html
@@ -1,103 +1,4 @@
-<!-- <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Application Details</title>
-    <style th:fragment="style">
-        /* CSS styles */
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        th {
-            background-color: #f2f2f2; /* Light gray background for column names */
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2; /* Light gray background for even rows */
-        }
-
-        .button-container {
-            margin-top: 20px;
-        }
-
-        .button {
-            display: inline-block;
-            background-color: #008CBA;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .button:hover {
-            background-color: #00587a;
-        }
-
-        .nav-link {
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
-            color: #008CBA;
-            font-size: 16px;
-        }
-
-        .nav-link:hover {
-            color: #00587a;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <h1>Application Details</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th style="background-color: #c0c0c0;">Employee Name</th>
-                    <th style="background-color: #c0c0c0;">Leave ID</th>
-                    <th style="background-color: #c0c0c0;">Start Date</th>
-                    <th style="background-color: #c0c0c0;">End Date</th>
-                    <th style="background-color: #c0c0c0;">Reasons</th>
-                    <th style="background-color: #c0c0c0;">Leave Type</th>
-                    <th style="background-color: #c0c0c0;">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td th:text="${leaveApplication.employee.name}"></td>
-                    <td th:text="${leaveApplication.id}"></td>
-                    <td th:text="${leaveApplication.start}"></td>
-                    <td th:text="${leaveApplication.end}"></td>
-                    <td th:text="${leaveApplication.reasons}"></td>
-                    <td th:text="${leaveApplication.entitlement.leaveType}"></td>
-                    <td class="button-container">
-                        <a href="#" class="button" th:href="@{'/manager/approve/' + ${leaveApplication.id}}">Approve</a>
-                        <a href="#" class="button" th:href="@{'/manager/reject/' + ${leaveApplication.id}}">Reject</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <a href="/manager/applications" class="nav-link">Back to View Applications for Approval Page</a>
-    </div>
-</body>
-
-</html>
- -->
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
@@ -106,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Application Details</title>
 	<style th:fragment="style">
-		/* CSS styles */
 		table {
 			border-collapse: collapse;
-			width: 100%;
+			width: 90%;
+			margin: 0 auto;
 		}
 
 		th,
@@ -120,13 +21,19 @@
 		}
 
 		th {
-			background-color: #f2f2f2;
-			/* Light gray background for column names */
+			background-color: #c0c0c0;
+		}
+
+		tr:nth-child(odd) {
+			background-color: #ffe6f0;
 		}
 
 		tr:nth-child(even) {
-			background-color: #f2f2f2;
-			/* Light gray background for even rows */
+			background-color: #c6e2ff;
+		}
+
+		.blank-row {
+			background-color: #ffffff;
 		}
 
 		.button {
@@ -147,11 +54,18 @@
 		}
 
 		.nav-link {
-			display: inline-block;
 			margin-top: 20px;
 			text-decoration: none;
 			color: #0000FF;
 			font-size: 16px;
+		}
+
+		h1 {
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			font-size: 30px;
+			color: #0000FF;
 		}
 	</style>
 </head>
@@ -162,27 +76,28 @@
 		<table>
 			<thead>
 				<tr>
-					<th style="background-color: #c0c0c0;">Employee Name</th>
-					<th style="background-color: #c0c0c0;">Leave ID</th>
-					<th style="background-color: #c0c0c0;">Start Date</th>
-					<th style="background-color: #c0c0c0;">End Date</th>
-					<th style="background-color: #c0c0c0;">Reasons</th>
-					<th style="background-color: #c0c0c0;">Leave Type</th>
-					<th style="background-color: #c0c0c0;">Actions</th>
+					<th>Employee Name</th>
+					<th>Employee ID</th>
+					<th>Leave ID</th>
+					<th>Start Date</th>
+					<th>End Date</th>
+					<th>Reasons</th>
+					<th>Leave Type</th>
+					
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<td th:text="${leaveApplication.employee.name}"></td>
+					<td >
+						<a th:href="@{/manager/leaveapprove/details/{id}(id=${leaveApplication.id})}" th:text="${leaveApplication.employee.name}"></a>
+					</td>
+					<td th:text="${leaveApplication.employee.id}"></td>
 					<td th:text="${leaveApplication.id}"></td>
 					<td th:text="${leaveApplication.start}"></td>
 					<td th:text="${leaveApplication.end}"></td>
 					<td th:text="${leaveApplication.reasons}"></td>
 					<td th:text="${leaveApplication.entitlement.leaveType}"></td>
-					<td class="button-container">
-						<a href="#" class="button" th:href="@{/manager/approve/{id}(id=${leaveApplication.id})}">Approve</a>
-						<a href="#" class="button" th:href="@{/manager/reject/{id}(id=${leaveApplication.id})}">Reject</a>
-					</td>
+					
 				</tr>
 			</tbody>
 		</table>
