--- a/bin/src/main/resources/templates/applications-approval.html
+++ b/bin/src/main/resources/templates/applications-approval.html
@@ -1,67 +1,4 @@
-<!-- <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leave Applications for Approval</title>
-    <style th:fragment="style">
-        /* CSS styles */
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        th {
-            background-color: #f2f2f2; /* Light gray background for column names */
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2; /* Light gray background for even rows */
-        }
-
-        .blank-row {
-            background-color: #ffffff; /* White background for blank rows */
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <h1>Leave Applications for Approval</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th style="background-color: #9090c0;">Employee Name</th>
-					<th style="background-color: #9090c0;">Leave ID</th>
-                    <th style="background-color: #9090c0;">Details</th>
-                </tr>
-            </thead>
-            <tbody>
-                
-                <tr th:each="leaveApplication,iter : ${leaveApplications}">
-                    <td th:text="${leaveApplication.employee.name}"></td>
-					<td th:text="${leaveApplication.id}"></td>
-                    <td>
-						<a th:href="@{/manager/application-details/{id}(id=${leaveApplication.id})}">View</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</body>
-
-</html>
- -->
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
@@ -70,10 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Leave Applications for Approval</title>
 	<style th:fragment="style">
-		/* CSS styles */
 		table {
 			border-collapse: collapse;
-			width: 40%;
+			width: 30%;
 			margin: 0 auto;
 		}
 
@@ -85,24 +21,36 @@
 		}
 
 		th {
-			background-color: #f2f2f2;
-			/* Light gray background for column names */
+			background-color: #c0c0c0;
+		}
+
+		tr:nth-child(odd) {
+			background-color: #ffe6f0;
 		}
 
 		tr:nth-child(even) {
-			background-color: #f2f2f2;
-			/* Light gray background for even rows */
+			background-color: #c6e2ff;
 		}
 
 		.blank-row {
 			background-color: #ffffff;
-			/* White background for blank rows */
 		}
 
 		.view-link {
 			color: #0000FF;
-			/* Light blue color for "view" hyperlink */
 			text-decoration: none;
+		}
+
+		.view-link:hover {
+			color: #00587a;
+		}
+
+		h1 {
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			font-size: 30px;
+			color: #0000FF;
 		}
 	</style>
 </head>
@@ -113,22 +61,46 @@
 		<table>
 			<thead>
 				<tr>
-					<th style="background-color: #9090c0;">Employee Name</th>
-					<th style="background-color: #9090c0;">Leave ID</th>
-					<th style="background-color: #9090c0;">Details</th>
+					<th>Employee Name</th>
+					<th>Leave ID</th>
+					<th>Details</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:if="${leaveApplications.size() == 0}">
 					<td colspan="3" style="text-align: center;">No employees found</td>
 				</tr>
-				<!-- Use Thymeleaf to iterate over the leaveApplications list -->
 				<tr th:each="leaveApplication,iter : ${leaveApplications}">
 					<td th:text="${leaveApplication.employee.name}"></td>
 					<td th:text="${leaveApplication.id}"></td>
 					<td>
 						<a th:href="@{/manager/application-details/{id}(id=${leaveApplication.id})}"
 							class="view-link">View</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<h1>Claim Requests for Approval</h1>
+		<table>
+			<thead>
+				<tr>
+					<th style="background-color: #9090c0;">Date Submitted</th>
+					<th style="background-color: #9090c0;">Employee Name</th>
+					<th style="background-color: #9090c0;">Claim ID</th>
+					<th style="background-color: #9090c0;">Details</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:if="${claimRequests.size() == 0}">
+					<td colspan="3" style="text-align: center;">No employees found</td>
+				</tr>
+				<!-- Use Thymeleaf to iterate over the leaveApplications list -->
+				<tr th:each="claim,iter : ${claimRequests}">
+					<td th:text="${claim.dateOfSubmission}"></td>
+					<td th:text="${claim.employee.name}"></td>
+					<td th:text="${claim.id}"></td>
+					<td>
+						<a th:href="@{/manager/claim-details/{id}(id=${claim.id})}" class="view-link">View</a>
 					</td>
 				</tr>
 			</tbody>
