--- a/bin/src/main/resources/templates/fragments/actionBody.html
+++ b/bin/src/main/resources/templates/fragments/actionBody.html
@@ -37,12 +37,25 @@
 		<div th:insert="~{leave_type_form.html :: body}"></div>
 	</div>
 	<div th:if="${action == 'edit-leave-type'}">
-			<div th:insert="~{leave_type_form_edit.html :: body}"></div>
-		</div>
-		
+		<div th:insert="~{leave_type_form_edit.html :: body}"></div>
+	</div>
+	<div th:if="${action == 'add-holidays'}">
+		<div th:insert="~{holiday.html :: style}"></div>
+		<div th:insert="~{holiday.html :: body}"></div>
+	</div>
+	<div th:if="${action == 'view-holidays'}">
+		<div th:insert="~{holiday.html :: style}"></div>
+		<div th:insert="~{holiday.html :: body}"></div>
+	</div>
+	
+	
 	<!-- Employee Use Cases -->
 	<div th:if="${action == 'leaveSubmitForm'}">
 		<div th:insert="~{submit-leave-app.html :: body}"></div>
+	</div>
+	
+	<div th:if="${action == 'consume-claim'}">
+		<div th:insert="~{apply-leave-using-claim.html :: body}"></div>
 	</div>
 		
 	<div th:if="${action == 'viewleaveHistory'}">
@@ -67,10 +80,20 @@
 		<div th:insert="~{applications-approval.html :: style}"></div>
 		<div th:insert="~{applications-approval.html :: body}"></div>
 	</div>
+	
+	<div th:if="${action == 'show-leave-details'}">
+		<div th:insert="~{leave-details.html :: style}"></div>
+		<div th:insert="~{leave-details.html :: body}"></div>
+	</div>
+	
+	<div th:if="${action == 'claim-details'}">
+		<div th:insert="~{claim-details.html :: style}"></div>
+		<div th:insert="~{claim-details.html :: body}"></div>
+	</div>
 
 	<div th:if="${action == 'search-employee-history'}">
 		<div th:insert="selected-employee-leave-history.html :: style"></div>
-		<div th:insert="selected-employee-leave-history :: body"></div>
+		<div th:insert="selected-employee-leave-history.html :: body"></div>
 	</div>
 	
 	<div th:if="${action == 'employeeHistory'}">
