--- a/bin/src/main/resources/templates/leave-details.html
+++ b/bin/src/main/resources/templates/leave-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Leave Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<style>
+	<style th:fragment="style">
 		    .status-applied { color: blue; }
 		    .status-rejected { color: red; }
 		    .status-approved { color: green; }
@@ -31,15 +31,16 @@
         <div class="col-md-6">
             <strong>Status:</strong>
 			<span th:switch="${leave.status}">
-			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Applied}" class="status-applied" th:text="${leave.status}"></span>
-			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Rejected}" class="status-rejected" th:text="${leave.status}"></span>
-			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Approved}" class="status-approved" th:text="${leave.status}"></span>
-			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Deleted}" class="status-deleted" th:text="${leave.status}"></span>
-			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Cancelled}" class="status-cancelled" th:text="${leave.status}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Applied}" class="status-applied" th:text="${leave.displayStatus()}"></span>
+					<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Cancelled}" class="status-cancelled" th:text="${leave.displayStatus()}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Rejected}" class="status-rejected" th:text="${leave.displayStatus()}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Approved}" class="status-approved" th:text="${leave.displayStatus()}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Deleted}" class="status-deleted" th:text="${leave.displayStatus()}"></span>
+			        
 			</span>
         </div>
         <div class="col-md-6">
-            <strong>Leave Type:</strong> <span th:text="${leave.type.type}"></span>
+            <strong>Leave Type:</strong> <span th:text="${leave.entitlement.leaveType}"></span>
         </div>
 		<div class="col-md-6">
 		    <strong>Comment:</strong> <span th:text="${leave.comment}"></span>
@@ -47,21 +48,23 @@
     </div>
 
     <!-- Approval and Rejection Form -->
-    <div class="mb-3" th:if="${leave.status.name()} == 'Applied'">
-        <form method="post" th:action="@{/leaveapprove/approve(id=${leave.id})}">
-            <button class="btn btn-success" type="submit">Approve</button>
+    <div class="mb-3" th:if="${leave.status== 1 ||leave.status==6}">
+        <form method="post" th:action="@{/manager/approve}" th:object="${leave}">
+			<input hidden th:field="*{id}"/>
+			<button class="btn btn-success" type="submit">Approve</button>
         </form>
 
-        <form method="post" th:action="@{/leaveapprove/reject(id=${leave.id})}">
-            <div class="form-group">
+        <form method="post" th:action="@{/manager/reject}" th:object="${leave}">
+            <input hidden th:field="*{id}"/>
+			<div class="form-group">
                 <label for="comment">Rejection Comment:</label>
-                <textarea id="comment" class="form-control" name="comment" required></textarea>
+                <textarea id="comment" class="form-control" name="comment" th:field="*{comment}" required></textarea>
             </div>
             <button class="btn btn-danger" type="submit">Reject</button>
         </form>
     </div>
+	<br/>
 
-    <a class="btn btn-link" th:href="@{/leaveapprove/list}">Back to list</a>
 
     <!-- History Table -->
     <h2 class="mt-5"><span th:text="${leave.employee.name}"></span> History Leave</h2>
@@ -80,15 +83,16 @@
             <td th:text="${leave.end}"></td>
             <td th:text="${leave.reasons}"></td>
 			<td th:switch="${leave.status}">
-				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Applied}" class="status-applied" th:text="${leave.status}"></span>
-				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Rejected}" class="status-rejected" th:text="${leave.status}"></span>
-				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Approved}" class="status-approved" th:text="${leave.status}"></span>
-				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Deleted}" class="status-deleted" th:text="${leave.status}"></span>
-				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Cancelled}" class="status-cancelled" th:text="${leave.status}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Applied}" class="status-applied" th:text="${leave.displayStatus()}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Rejected}" class="status-rejected" th:text="${leave.displayStatus()}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Approved}" class="status-approved" th:text="${leave.displayStatus()}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Deleted}" class="status-deleted" th:text="${leave.displayStatus()}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Cancelled}" class="status-cancelled" th:text="${leave.displayStatus()}"></span>
 			</td>
         </tr>
         </tbody>
     </table>
+	<a class="btn btn-link" th:href="@{/manager/applications}">Back to View Leave Applications</a>
 </div>
 </body>
 </html>
