resolved react component queries

--- a/src/main/resources/templates/leavetypes.html
+++ b/src/main/resources/templates/leavetypes.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <h1>Leave Types</h1>
-	<form th:action="@{/admin/leavetypes}" method="get">
+	<form th:action="@{/adminEntitlement/leavetypes}" method="get">
 	    <label for="year">Select Year:</label>
 	    <select id="year" name="year">
 	        <option value="">All</option>
@@ -76,13 +76,13 @@
 				<td th:text="${leaveEntitlement.numberOfDays}"></td>
 				<td th:text="${leaveEntitlement.year}"></td>
                 <td>
-                    <a th:href="@{/admin/leavetypes/edit/{id}(id=${leaveEntitlement.id})}">Edit</a> |
-                    <a th:href="@{/admin/leavetypes/delete/{id}(id=${leaveEntitlement.id})}">Delete</a>
+                    <a th:href="@{/adminEntitlement/leavetypes/edit/{id}(id=${leaveEntitlement.id})}">Edit</a> |
+                    <a th:href="@{/adminEntitlement/leavetypes/delete/{id}(id=${leaveEntitlement.id})}">Delete</a>
                 </td>
             </tr>
         </tbody>
     </table>
-    <a href="/admin/leavetypes/add" class="add-leave-type">Add Entitlement</a>
+    <a href="/adminEntitlement/leavetypes/add" class="add-leave-type">Add Entitlement</a>
 </body>
 </html>
 
