--- a/src/main/resources/templates/leave_type_form_edit.html
+++ b/src/main/resources/templates/leave_type_form_edit.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <h1>Edit Leave Entitlement</h1>
-    <form th:action="@{/admin/leavetypes/edit/save}" th:object="${leaveEntitlement}" method="post">
+    <form th:action="@{/adminEntitlement/leavetypes/edit/save}" th:object="${leaveEntitlement}" method="post">
         <input hidden th:field="*{id}" />
 		<div>
             <label>Role:</label>
@@ -86,6 +86,6 @@
             <button type="submit">Save</button>
         </div>
     </form>
-    <a href="/admin/leavetypes">Back to Leave Entitlements</a>
+    <a href="/adminEntitlement/leavetypes">Back to Leave Entitlements</a>
 </body>
 </html>
